# MultiturnAiChatbotWithLlama3

./: .env.example  .gitignore  00-START-HERE.md  AGENT.md  Add Classification in llama3.md  Compare LLaMA 3 with Other Ollama Models.md  FRONTEND_AGENT.md  GROQ_MIGRATION_SUMMARY.md  GROQ_QUICK_START.txt  GROQ_SETUP.md  GROQ_WINDOWS_FIX.md  INDEX.md  LLaMA 3 Tasks.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  Research Question.md  SETUP_GUIDE.txt  Spring 2026_CS619_13329_1.docx  Train LLaMA 3.md  UV_SETUP.md  app.py  pyproject.toml  requirements.txt  setup-uv.bat  setup-uv.ps1  what is llama3.md
chatbot-ui/supabase/: config.toml  types.ts
chatbot_project/: README.md  UV_QUICKSTART.md  app.py  pyproject.toml  run-groq.bat
chatbot_project/static/js/: script.js
chatbot_project/templates/: index.html
frontend/: .env.example  .gitignore  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  tailwind.config.ts  test-auth.js  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  loading.tsx  page.tsx
frontend/app/(chat)/: page.tsx  (+1 more)
frontend/components/: feedback-modal.tsx  profile-modal.tsx  providers.tsx
frontend/context/: auth-context.tsx  chat-context.tsx  index.tsx
frontend/db/: chats.ts  files.ts  folders.ts  index.ts  presets.ts  profiles.ts  prompts.ts
frontend/hooks/: index.ts  use-dashboard.ts
frontend/lib/: ai-providers.ts  auth.ts  consume-stream.ts  supabase.ts  user-service.ts  utils.ts  validators.ts
frontend/styles/: globals.css
frontend/supabase/: config.toml
frontend/types/: index.ts
static/css/: style.css
(+39 files in other folders)
